--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,7 @@
 {%block content%}
 <div class="about">
     <h1>About</h1>
-    <p1>This is me</p1>
+    <p>This is me</p>
+    <p>This is also me</p>
 </div>
 {%endblock%}
